# oeldocx_rs

./: Cargo.toml  GEMINI.md  PLAN.md  README.md  ROADMAP.md  UNIT_TEST_PLAN.md  package-lock.json  package.json
src/: fonts.rs  lib.rs  main.rs
src/commands/: format.rs  mod.rs  paragraph.rs  section.rs  table.rs  text.rs
src/controller/: docx_controller.rs  mod.rs
src/convert/: from_docx.rs  mod.rs  to_docx.rs  to_render.rs
src/cursor/: mod.rs  position.rs  selection.rs
src/history/: mod.rs  snapshot.rs
src/model/: block.rs  document.rs  mod.rs  section.rs  style.rs
src/render/: types.rs
src/state/: types.rs
src/wasm/: bindings.rs
tests/fixtures/: basic_text.docx
