[package]
name = "oeldocx-rs"
version = "0.1.0"
edition = "2024"
authors = ["OutilsEnLigne.ca"]
description = "DOCX document editing engine for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oeldocx_rs"
path = "src/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
docx-rs = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
base64 = "0.22.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
